# application-gstreamer-plugins-syna

./: README  README.md  gstreamer-plugins-syna.mk  meson.build  meson_options.txt
ext/: meson.build
ext/synap/: gstsynap.cpp  gstsynap.h  gstsynapinfer.cpp  gstsynapinfer.h  gstsynapoverlay.cpp  gstsynapoverlay.h  gstsynapoverlayrender.cpp  gstsynapoverlayrender.h  gstsynapplugin.cpp  meson.build  synapmeta.cpp  synapmeta.h
tests/: meson.build
tests/examples/: meson.build
tests/examples/gst-ai/: gst_ai_ic.cpp  gst_ai_ic.h  main.cpp  meson.build  options.h
